@@ -1,3 +1,9 @@
+2007-06-09  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance-style.c: (theme_name_changed):
+	Manually deal with gtk+ theme changes now that the theme thumbnailing
+	code uses the default GtkSettings again.
+
 2007-06-10  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (style_init), (check_color_schemes_enabled):
